Update runols4.sh