@@ -1,4 +1,7 @@
+
 export OLS4_CONFIG=./config/ols-config/ols-config.json
+
+export JAVA_OPTS="--add-modules jdk.incubator.vector --add-opens=java.base/java.nio=ALL-UNNAMED -Xms12g -Xmx12g"
 
 mkdir -p tmp
 sh odk.sh make ontologies -B
